# QA_automation_showcase

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  report.html  requirements.txt
.github/workflows/: tests.yml
config/: settings.py
docs/: BUG_REPORT_TEMPLATE.md  PROJECT.md  TEST_STRATEGY.md
docs/findings/: BUG-001_problem_user_broken_images.md
pages/: base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
postman/: environment.json
test_data/: bookings.json  users.json
tests/: conftest.py
tests/api/: conftest.py  test_auth.py  test_booking_crud.py  test_booking_negative.py
tests/ui/: conftest.py  test_cart.py  test_checkout.py  test_inventory.py  test_login.py
utils/: allure_helpers.py  api_client.py  logger.py
